[Quick Fix] Modified the alignment of over lay text on the photo tiles.

--- a/to-boldly-go/public/stylesheets/tiles.css
+++ b/to-boldly-go/public/stylesheets/tiles.css
@@ -95,9 +95,8 @@
 	overflow: hidden;
 	color: #ffffff;
 	font-family: arial;
-	left: 35%;
-	top: 50%;
-	transform: translate(-50%, -50%);
+	left: 5%;
+	top: 30%;
 	font-size: 15px;
 }
 
